--- a/gwt-webapp/src/main/webapp/index.html
+++ b/gwt-webapp/src/main/webapp/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" language="javascript" src="Main/Main.nocache.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="index.css" type="text/css"/>
 
     <style>
         :focus {
